[gd_scene load_steps=2 format=3 uid="uid://dtcf70aarc1in"]

[ext_resource type="Script" path="res://scripts/test_scripts/test_card.gd" id="1_4uny4"]

[node name="TestCard" type="Node"]
script = ExtResource("1_4uny4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="reset_button" type="Button" parent="."]
anchors_preset = -1
anchor_left = -0.478299
anchor_top = 0.0169753
anchor_right = -0.347222
anchor_bottom = 0.154321
theme_override_font_sizes/font_size = 41
text = "reset"
metadata/_edit_use_anchors_ = true

[node name="cards" type="Control" parent="."]
layout_mode = 3
anchor_left = -0.480903
anchor_top = -0.481481
anchor_right = -0.34809
anchor_bottom = -0.0123457
metadata/_edit_use_anchors_ = true

[node name="card_label" type="Label" parent="cards"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.267974
anchor_top = 0.0328947
anchor_right = 0.771242
anchor_bottom = 0.161184
theme_override_font_sizes/font_size = 28
text = "Cards"
metadata/_edit_use_anchors_ = true

[node name="card_list" type="ItemList" parent="cards"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.213816
anchor_right = 1.00654
anchor_bottom = 1.00658
offset_right = -1.52588e-05
metadata/_edit_use_anchors_ = true

[node name="frames" type="Control" parent="."]
layout_mode = 3
anchor_left = -0.332465
anchor_top = -0.481481
anchor_right = -0.199653
anchor_bottom = -0.0123457
metadata/_edit_use_anchors_ = true

[node name="frame_label" type="Label" parent="frames"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.189543
anchor_top = 0.0361842
anchor_right = 0.843137
anchor_bottom = 0.164474
theme_override_font_sizes/font_size = 28
text = "Frames
"
metadata/_edit_use_anchors_ = true

[node name="frame_list" type="ItemList" parent="frames"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.213816
anchor_right = 1.00654
anchor_bottom = 1.00658
offset_right = -1.52588e-05
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="item_clicked" from="cards/card_list" to="." method="_on_card_list_item_clicked"]
[connection signal="item_clicked" from="frames/frame_list" to="." method="_on_frame_list_item_clicked"]
